# summarizer

./: .gitignore  README.md  pyproject.toml
src/main/python/summarizer/: __init__.py  __main__.py  cli.py  feedback.py  file_ops.py  llm_clients.py  models.py  prompts.py
summaries/: summary_2025-09-02_to_2025-09-10.md
whispermac_sync/: TEMPLATE.com.user.whispermacsync.plist  setup.py  whispermac_sync.sh
