[project]
name = "summarizer"
version = "0.1.0"
description = "Summarize daily or multi-day transcription notes into task-grouped Markdown reports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "google-generativeai>=0.8.5",
    "jinja2>=3.1.6",
    "openai>=1.107.0",
]

[project.scripts]
summarizer = "summarizer.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/main/python"]
